# tiara

./: LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
data/Supplementary_sequences/: ERR1726574_putative_organelle_10k.fa  ERR1726574_putative_organelle_10k_aa.fa  ERR1726673_putative_organelle_10k.fa  ERR1726673_putative_organelle_10k_aa.fa  ERR868402_putative_organelle_10k.fa  ERR868402_putative_organelle_10k_aa.fa
docs/: README.md  detailed-installation.md  eukaryotic_pipeline.md  organellar_pipeline.md  prokaryotic_pipeline.md  usage.md
tiara/: __init__.py  main.py
tiara/models/nnet-models/: second_nnet_kmer_4.pkl  second_nnet_kmer_5.pkl
tiara/models/tfidf-models/k4-first-stage/: model.npy  params.txt
tiara/models/tfidf-models/k4-second-stage/: model.npy  params.txt
tiara/models/tfidf-models/k5-first-stage/: model.npy  params.txt
tiara/models/tfidf-models/k5-second-stage/: model.npy  params.txt
tiara/models/tfidf-models/k6-first-stage/: model.npy  params.txt
tiara/src/: bow.py  classification.py  models.py  prediction.py  transformations.py  utilities.py
tiara/test/: test.py
tiara/test/test_data/: archaea_fr.fasta  archaea_out.txt  bacteria_fr.fasta  bacteria_out.txt  eukarya_out.txt  log_archaea_out.txt  log_archea_out.txt  log_bacteria_out.txt  log_eukarya_out.txt  log_mitochondria_out.txt  log_plast_out.txt  mitochondria_fr.fasta  mitochondria_out.txt  plast_fr.fasta
tiara/training/: hyperparameter_search_first_stage.py  hyperparameter_search_second_stage.py  train_models.py  train_tfidf.py
(+4 files in other folders)
